--- a/style.css
+++ b/style.css
@@ -4,14 +4,45 @@ body {
   align-items: center;
 }
 
-#header, #main, #footer {
+/* #, #main, #footer {
   display: flex;
-  flex-direction: column; /* 縦方向に要素を配置 */
-  justify-content: center; /* 中央に配置 */
-  align-items: center; /* 中央に配置 */
-  height: 100vh; /* ビューポートの高さいっぱいに要素を広げる */
-  width: 100%; /* 要素の幅をビューポートの幅いっぱいに広げる */
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+  height: 100vh; 
+  width: 100%; 
+} */
+
+#header {
+  position: fixed;
+  top: 0; 
+  left: 0; 
+  height: 35px; 
+  width: 100%; 
+  padding-top: 50px; 
 }
+
+#main {
+  align-items: center;
+  width: 100%; 
+  overflow: auto; 
+  display: flex;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+  height: 100vh; 
+  width: 100%; 
+}
+
+#footer {
+  position: fixed; 
+  bottom: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 35px; 
+  padding-bottom:50px; 
+}
+
 
 .hidden {
   display: none;
@@ -19,11 +50,6 @@ body {
 
 .visible {
   display: block;
-}
-
-#img-shop {
-  height: 500px;
-  width: auto;
 }
 
 .button {
@@ -45,44 +71,49 @@ body {
   cursor: pointer;
 }
 
+#img-shop {
+  height: 500px;
+  width: auto;
+}
+
 #img-machine {
-  width: 200px;
-  height: auto;
+  height: 500px;
+  width: auto;
 }
 
 #img-staff {
-  width: 200px;
-  height: auto;
+  height: 500px;
+  width: auto;
 }
 
 #container-shop {
-  width: 500px;
   height: 500px;
+  width: 500px;
 }
 
 #container-machine {
-  width: 500px;
   height: 500px;
+  width: 500px;
 }
 
 #container-select {
-  width: 500px;
   height: 500px;
+  width: 500px;
 }
 
 #container-order {
-  width: 500px;
   height: 500px;
+  width: 500px;
 }
 
 #container-cooking {
-  width: 500px;
   height: 500px;
+  width: 500px;
 }
 
 #container-serve {
-  width: 500px;
   height: 500px;
+  width: 500px;
 }
 
 .container{
